--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Desconocido</title>
+	<title>Calipso</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@
 	        <span class="icon-bar"></span>                        
 	      </button>
 
-	      <a class="navbar-brand" href="#myPage">Desconocido</a>
+	      <a class="navbar-brand" href="#myPage">Calipso</a>
 
 	    </div>
 	    <div class="collapse navbar-collapse" id="myNavbar">
@@ -50,7 +50,7 @@
 	<div id="band" class="container text-center">
 
 	  <center><img src="https://i.imgur.com/1IWJxQR.png" class="img-responsive"></center>
-	  <p><em>Folk/Melodic Death Metal</em></p>
+	  <p><em>Viking Metal</em></p>
 	  <p>Pasto/Nariño/Colombia</p>
 	  <br>
 	  <div class="row">
